smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/apply/apply-statements.smithy
$version: "2.0"
namespace smithy.example

structure Foo {
    baz: String,
}

apply Foo$baz @documentation("Hi")
