smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enums/enum-with-newline-before-value.smithy
// Syntax error at line 6, column 10
$version: "2.0"
namespace smithy.example

enum Foo {
    BAR =
    "hi"
}
